<resources>
    <string name="app_name">EUVou</string>
<<<<<<< Updated upstream
    <string name="title_programacao">Programação</string>
    <string name="title_programacao_do_dia">Hoje</string>
    <string name="title_frequencia">Frequência</string>
    <string name="title_avaliacoes">Avaliações</string>
    <string name="title_atividades">Atividades Participadas</string>
    <string name="search_hint">Digite a atividade</string>

=======
    <string name="title_programming">Programação</string>
    <string name="title_programming_day">Hoje</string>
    <string name="title_frequency">Frequência</string>
    <string name="title_evaluation">Avaliações</string>
    <string name="title_activities">Atividades Participadas</string>
    <string name="search_hint">Digite o name da activity</string>
>>>>>>> Stashed changes
    <string name="started_activities">Iniciadas</string>
    <string name="finished_activities">Finalizadas</string>
    <string name="next_activities">Próximas</string>
    <string name="started_activity">Em andamento</string>
    <string name="finished_activity">Finalizada</string>
    <string name="next_activity">Não iniciada</string>
<<<<<<< Updated upstream
    <string name="fragment_realizar_frequencia_upper_text">Frequência</string>
    <string name="my_activities">Minhas atividades</string>
    <string name="realizar_frequencia">Realizar frequência - Sala</string>
=======
    <string name="frequency">Frequência</string>
    <string name="my_activities">Minhas activities</string>
    <string name="perform_room_frequency">Realizar frequência - Sala</string>
>>>>>>> Stashed changes
    <string name="qr_code_title">Meu Código</string>
    <string name="close">Fechar</string>

    <string name="qrcode">QRCode</string>
<<<<<<< Updated upstream
    <string name="senha">Senha</string>
    <string name="entrar_perfil">Entrar</string>
    <string name="cadastrar_usuario">Cadastre-se</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="token">Código</string>
    <string name="password">Nova senha</string>
    <string name="confirm_password">Confirmação de senha</string>
=======
    <string name="password">Senha</string>
    <string name="enter_profile">Entrar</string>
    <string name="register_user">Cadastre-se</string>
    <string name="forgot_password">Esqueci minha password</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="code">Código</string>
    <string name="new_password">Nova password</string>
    <string name="password_confirmation">Confirmação de password</string>
>>>>>>> Stashed changes
    <string name="matricula">Matrícula</string>
    <string name="entre_perfil">Já se cadastrou?</string>
    <string name="cpf">CPF</string>
<<<<<<< Updated upstream
    <string name="avaliar_atividade">Avaliar atividade</string>
    <string name="iniciar_atividade">Iniciar atividade</string>
    <string name="finalizar_atividade">Finalizar atividade</string>
    <string name="atividade_finalizada">Atividade Finalizada</string>
    <string name="where">Local</string>
    <string name="description">Descrição</string>
    <string name="default_description">Esta atividade busca mostrar as técnicas utilizadas em Engenharia de Software para elicitação de requisitos em projetos ágeis de software. Você aprenderá técnicas atualizadas e muito utilizadas no ramo.</string>

=======
    <string name="evaluate_activity">Avaliar activity</string>
    <string name="start_activity">Iniciar activity</string>
    <string name="end_activity">Finalizar activity</string>
    <string name="activity_completed">Activity Finalizada</string>
    <string name="where">Local</string>
    <string name="description">Descrição</string>
    <string name="default_description">Esta activity busca mostrar as técnicas utilizadas em Engenharia de Software para elicitação de requisitos em projetos ágeis de software. Você aprenderá técnicas atualizadas e muito utilizadas no ramo.</string>
>>>>>>> Stashed changes
    <string name="invalid_email_message">O email fornecido é inválido</string>
    <string name="invalid_password_message">A password fornecida é muito curta, digite uma de no mínimo 6 caracteres</string>
    <string name="invalid_matricula_message">A matrícula fornecida não contém 6 dígitos</string>
    <string name="already_taken_email_message">O email fornecido já está em uso</string>
    <string name="already_taken_matricula_message">A matrícula fornecida já está em uso</string>
    <string name="blank_field_message">Por favor, preencha este campo</string>
    <string name="invalid_matricula_login_message"> A matrícula fornecida é inválida</string>
    <string name="invalid_passord_login_message"> A password fornecida é inválida, ela é composta de no mínimo 6 caracteres</string>
    <string name="wrong_passord_login_message"> A password está incorreta, tente novamente</string>
    <string name="unregistered_email_message">Esse email não possui cadastro, crie uma conta para entrar</string>
    <string name="something_went_wrong">Não foi possível processar sua requisição</string>
    <string name="message_verify_matricula"> Verificação de matrícula </string>
    <!--<string name="ir_para_tela_cadastro"> Efetuar Cadastro </string>-->
    <string name="qrcode_title">Leitor de código de barras - Encontros Universitários 2019</string>
    <string name="read_matricula">Digite a matricula do participante</string>
    <string name="get_user">Verificar matrícula</string>
    <string name="frequencia">Realizar Frequência</string>
    <string name="ckeckin_checkout">Checkin/Checkout</string>
    <string name="generate_pdf">Gerar PDF</string>
    <string name="avaliacao_atividades">Avaliação de Atividades</string>
    <string name="generate_token">Gerar código</string>
    <string name="reset_password">Alterar password</string>
    <string name="recuperacao_senha">Recuperação de password</string>
    <string name="token_generation">GERAÇÃO DE CÓDIGO DE RECUPERAÇÃO DE SENHA</string>
    <string name="password_recovery">RECUPERAÇÃO DE SENHA</string>
<<<<<<< Updated upstream
    <string name="media">Média</string>
    <string name="matricula_inexistente">A matrícula fornecida não foi encontrada em nossa base de dados, por favor envie um email com sua nome, matrícula, email e curso para: n2s@ufc.br  </string>

=======
    <string name="average">Média</string>
    <string name="registration_nonexistent">A matrícula fornecida não foi encontrada em nossa base de dados, por favor envie um email com sua name, matrícula, email e curso para: n2s@ufc.br  </string>
    <string name="student_message">"As activities listadas abaixo corresponderão apenas às que você assistiu por completo, porém todo seu tempo de permanência nas salas será contabilizado!"</string>
>>>>>>> Stashed changes

</resources>
